hamburger improvements with verbage updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,11 +46,11 @@
       </div>
     </td>
 
-    <td style="width: 500px; vertical-align: top; padding-left: 0px; padding-top: 5px;">
+    <td style="vertical-align: top; padding-left: 0px; padding-top: 5px;" class="portfolio-top-headline-td-width">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
           Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
-      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">I'm currently in the process of updating my portfolio with a blend of past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.
+      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
       </p>
     </td>
@@ -724,9 +724,9 @@
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
       <p class="resume-prompt" style="margin-top: 3%; margin-bottom: 3%;">
-      Feel&nbsp;free to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> to view my complete portfolio, as some projects are under non-disclosure agreements and cannot be shared broadly.<br><br>
+      Please don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio. Kindly note that some projects are bound by non-disclosure agreements and thus cannot be shared openly.<br><br>
       <center>
-      <span style="font-family: 'Lato', serif; font-weight:bold; color: #666666;">~ Thanks again for visiting. Have a great day.</span>
+      <p style="font-family: 'Lato', serif; font-weight:bold; color: #666666;">~ Thanks again for visiting. Have a great day ~</p>
     </center>
       </p><br><br><br>
     </td>
