--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>Edwin's portfolio</title>
   </head>
-<body style="overflow-x: hidden; ">
+<body style="overflow-x: hidden; background-color: rgba(244, 239, 228, 0);">
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
