--- a/portfolio.html
+++ b/portfolio.html
@@ -129,7 +129,7 @@
         <label>
           <input type="checkbox">
             <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop blgbeyondone">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-four.jpg" class="portfolio_images_pop blgbeyondtwo" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg); -o-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg);">
+            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-four.jpg" class="portfolio_images_pop blgbeyondtwo">
         </label>
       </div>
       <p class="titleforpopup">2022 | Digital Designer for BLG Merchandise Store</p>
@@ -378,7 +378,7 @@
                 <span class="skillsbubble">CSS</span><span class="skillsbubble">HTML</span><span class="skillsbubble">Dreamweaver</span><span class="skillsbubble">Photoshop</span><span class="skillsbubble">InterAction</span>
               </p>
             </span>
-          <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2.5); opacity: 1; padding-left:15%;">
+          <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2.5); opacity: 1;">
         </div>
       </td>
   </tr>
