--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     </td>
 
     <td style="vertical-align: top; padding-left: 0px; padding-top: 5px;" class="portfolio-top-headline-td-width">
-      <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
+      <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9; font-family: 'oldenbury', serif; font-weight: bold;">
           Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
       <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>
@@ -59,7 +59,7 @@
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
       <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
-      <p style="color: #333333; font-family: 'lato', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666;">Digital Designer</span></p>
+      <p style="color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666; font-family: 'lato', san-serif">Digital Designer</span></p>
     </center>
 
 <!--</a>-->
@@ -241,7 +241,7 @@
 <tr>
   <td colspan="3">
     <p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
-      As a digital designer specializing in web, apps, and social media platforms, my aim is to craft designs that captivate audiences endlessly. I believe design transcends mere appearances; it's about how it functions. Employing critical design thinking and thorough research, I create holistic designs that enhance the user experience. I also leverage prompt engineering and AI tools when necessary to elevate designs to new heights.</p><br>
+      As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe design transcends mere appearances; it's about how it functions. Employing critical design thinking and thorough research, I create holistic designs that enhance the user experience. I also leverage prompt engineering and AI tools when necessary to elevate designs to new heights.</p><br>
   <td>
 
 </tr>
@@ -310,14 +310,41 @@
 <table class="threecoloumntables">
 <tr>
   <td colspan="3">
-    <p class="resume-prompt " style="margin-top: 2%;">
+    <p class="resume-prompt " style="margin-top: 2%; margin-bottom: 5%;">
     I also have skills in video creation and video editing.  I work with the team to brainstorm video ideas that are used on company social media channels and webpages.</p><br>
+
     <center>
     <hr style="margin: 0; background-color: #efefef; width:94%;">
   </center><br>
+
   <td>
 
 </tr>
+
+</table>
+
+<!-- About me with icons three columsn -->
+
+<table class="threecoloumntables wideaboutme">
+  <tr>
+
+    <td class="threebythreegridaboutme" style="">
+      <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
+      <p>User-Centric Design&nbsp;Advocate</p>
+    </td>
+
+    <td class="threebythreegridaboutme" style="">
+     <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
+     <p>Creative Problem&nbsp;Solver</p>
+    </td>
+
+
+    <td class="threebythreegridaboutme" style="">
+      <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
+      <p>Collaborative Team&nbsp;Player</p>
+    </td>
+
+  </tr>
 
 </table>
 
@@ -328,6 +355,11 @@
 <table class="threecoloumntables">
   <tr>
     <td colspan="3" class="threebythreegrid">
+
+      <center>
+      <hr style="margin: 0; background-color: #efefef; width:94%;">
+    </center><br>
+
       <p style="background: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2017 - 2020 | Digital Designer - Blake, Cassels & Graydon LLP</p>
     </td>
   </tr>
@@ -341,7 +373,7 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop">
+          <img alt="blakes webpage 1" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop">
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">-->
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">-->
         </label>
@@ -755,7 +787,7 @@
       <p class="resume-prompt" style="margin-top: 3%; margin-bottom: 3%;">
       Please don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio. Kindly note that some projects are bound by non-disclosure agreements and thus cannot be shared openly.<br><br>
       <center>
-      <p style="font-family: 'Lato', serif; font-weight:bold; color: #666666;">~ Thanks again for visiting. Have a great day ~</p>
+      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day ~</p>
     </center>
       </p><br><br><br>
     </td>
