updated footer font size

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
+      <img alt="Edwin bio picture" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
       <p style="color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666; font-family: 'lato', san-serif">Digital Designer</span></p>
     </center>
 
@@ -110,10 +110,10 @@
           </p>
 		  </span>
       <figure>
-        <img alt="Carousel Bootstrap Third" src="images/beyond.jpg" class="portfolio_images oneflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
+        <img alt="BLG Beyond Visual screen" src="images/beyond.jpg" class="portfolio_images oneflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
       </figure>
       <figure>
-        <img alt="Carousel Bootstrap Third" src="images/beyond-flat.jpg" class="portfolio_images twoflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
+        <img alt="BLG Beyond UI screen" src="images/beyond-flat.jpg" class="portfolio_images twoflowtwo" style="display: inline; margin-left: auto; margin-right: auto; opacity: 1;">
       </figure>
 
       </div>
@@ -128,8 +128,8 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images_pop blgbeyondone">
-            <img alt="Carousel Bootstrap Third" src="images/blgwebstore-four.jpg" class="portfolio_images_pop blgbeyondtwo">
+            <img alt="BLG Store Visual portfolio" src="images/blgwebstore.jpg" class="portfolio_images_pop blgbeyondone">
+            <img alt="BLG Store UI portfolio" src="images/blgwebstore-four.jpg" class="portfolio_images_pop blgbeyondtwo">
         </label>
       </div>
       <p class="titleforpopup">2022 | Digital Designer for BLG Merchandise Store</p>
@@ -168,8 +168,8 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-              <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
-              <img alt="Carousel Bootstrap Third" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
+              <img alt="BLG General Brand Awareness 1" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
+              <img alt="BLG General Brand Awareness 2" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
 
             </label>
           </div>
@@ -179,7 +179,7 @@
               <span class="skillsbubble">Figma</span><span class="skillsbubble">Dreamweaver</span><span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span>
 </p>
           </span>
-            <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="margin-left: auto; margin-right: auto; opacity: 1;">
+            <img alt="BLG General Brand Awareness 1" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="margin-left: auto; margin-right: auto; opacity: 1;">
           </div>
         </td>
 
@@ -192,7 +192,7 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images_pop">
+          <img alt="BLG Technology Trends Gif" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images_pop">
         </label>
       </div>
               <p class="titleforpopup">2020 - 2024 | Digital Designer for Borden Ladner Gervais LLP</p>
@@ -202,7 +202,7 @@
               <span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span><span class="skillsbubble">PowerPoint</span>
               </p>
           </span>
-          <img alt="Carousel Bootstrap Third" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
+          <img alt="BLG Technology Trends Gif" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
         </div>
       </td>
 
@@ -217,7 +217,7 @@
               <div class="click-zoom">
                 <label>
                   <input type="checkbox">
-                  <img alt="Renew" src="images/BLG-ReNew.gif" class="portfolio_images_pop">
+                  <img alt="BLG ReNew Gif" src="images/BLG-ReNew.gif" class="portfolio_images_pop">
                 </label>
               </div>
               <p class="titleforpopup">2020 - 2024 | Digital Design - Borden Ladner Gervais LLP</p>
@@ -227,7 +227,7 @@
               <span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span><span class="skillsbubble">PowerPoint</span>
               </p>
           </span>
-            <img alt="Carousel Bootstrap Third" src="images/BLG-ReNew.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+            <img alt="BLG ReNew Gif" src="images/BLG-ReNew.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
 
           </div>
         </td>
@@ -329,18 +329,18 @@
   <tr>
 
     <td class="threebythreegridaboutme" style="">
-      <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
+      <img alt="About Me User Centric" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
       <p>User-Centric Design&nbsp;Advocate</p>
     </td>
 
     <td class="threebythreegridaboutme" style="">
-     <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
+     <img alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
      <p>Creative Problem&nbsp;Solver</p>
     </td>
 
 
     <td class="threebythreegridaboutme" style="">
-      <img alt="Carousel Bootstrap Third" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
+      <img alt="About Me Team Player" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
       <p>Collaborative Team&nbsp;Player</p>
     </td>
 
@@ -385,8 +385,8 @@
               <span class="skillsbubble">Figma</span><span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span><span class="skillsbubble">Bridge</span></p>
           </span>
           <figure>
-        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Blakes dot com perspective" src="images/blakes-perspective-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Blakes dot com gradient" src="images/blakes-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
       </figure>
       </div>
     </td>
@@ -401,7 +401,7 @@
             <div class="click-zoom">
               <label>
                 <input type="checkbox">
-            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
+            <img alt="HTML Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images_pop">
           </label>
         </div>
               <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span></p>
@@ -506,7 +506,7 @@
               </p>
           </span>
           <figure>
-            <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
+            <img alt="Blakes Madness HTML" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
             <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images twoflowtwo"></video>
           </figure>
       </div>
@@ -522,7 +522,7 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
+          <img alt="Shania Twain HTML" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
         </label>
       </div>
             <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
@@ -531,7 +531,7 @@
                 <span class="skillsbubble">CSS</span><span class="skillsbubble">HTML</span><span class="skillsbubble">Dreamweaver</span><span class="skillsbubble">Photoshop</span><span class="skillsbubble">InterAction</span>
               </p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+        <img alt="Shania Twain HTML" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
       </div>
     </td>
 
@@ -575,7 +575,7 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/Starwars.jpg" class="portfolio_images_pop">
+          <img alt="StarWars packaging" src="images/Starwars.jpg" class="portfolio_images_pop">
         </label>
       </div>
             <p class="titleforpopup">2016 - 2017 | Design Manager &mdash; Thinkway Toys</p>
@@ -584,7 +584,7 @@
               <span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span><span class="skillsbubble">ERP</span><span class="skillsbubble">Lucas Films Style Guides</span>
                           </p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/Starwars-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.8;">
+        <img alt="StarWars packaging" src="images/Starwars-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.8;">
       </div>
     </td>
 
@@ -626,7 +626,7 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/disneyproduct.jpg" class="portfolio_images_pop">
+          <img alt="Disney Product Design" src="images/disneyproduct.jpg" class="portfolio_images_pop">
         </label>
         </div>
             <p class="titleforpopup">2013 - 2016 | Associate, Product Approval for Disney Canada</p>
@@ -638,8 +638,8 @@
             </p>
           </span>
           <figure>
-            <img alt="Carousel Bootstrap Third" src="images/disneyproduct-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
-            <img alt="Carousel Bootstrap Third" src="images/mickey100-disney-logo.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+            <img alt="Disney Product Design" src="images/disneyproduct-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto;">
+            <img alt="Disney Logo" src="images/mickey100-disney-logo.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
           </figure>
         </div>
         </td>
@@ -654,8 +654,8 @@
               <div class="click-zoom">
                 <label>
                   <input type="checkbox">
-              <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images_pop blgbeyondone">
-              <img alt="Carousel Bootstrap Third" src="images/mickey100-shirt-price.jpg" class="portfolio_images_pop blgbeyondtwo">
+              <img alt="Disney Mickey" src="images/mickey100.jpg" class="portfolio_images_pop blgbeyondone">
+              <img alt="Disney Mickey Tshirt" src="images/mickey100-shirt-price.jpg" class="portfolio_images_pop blgbeyondtwo">
 
             </label>
           </div>
@@ -670,9 +670,9 @@
                   </p>
               </span>
             <figure>
-              <img alt="Carousel Bootstrap Third" src="images/mickey100.jpg" class="portfolio_images mickey100" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.9; background-size: cover;">
-              <img alt="Carousel Bootstrap Third" src="images/mickey100-disney-logo.jpg" class="portfolio_images mickey100disney" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
-              <img alt="Carousel Bootstrap Third" src="images/mickey100-uniqlo-logo.jpg" class="portfolio_images mickey100uniqlo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
+              <img alt="Disney Mickey Tshirt" src="images/mickey100.jpg" class="portfolio_images mickey100" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.9; background-size: cover;">
+              <img alt="Disney Logo" src="images/mickey100-disney-logo.jpg" class="portfolio_images mickey100disney" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
+              <img alt="Uniqlo Logo" src="images/mickey100-uniqlo-logo.jpg" class="portfolio_images mickey100uniqlo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
             </figure>
 
 
@@ -716,7 +716,7 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/DG2022.jpg" class="portfolio_images_pop">
+          <img alt="Dolce and Gabanna portfolio" src="images/DG2022.jpg" class="portfolio_images_pop">
         </label>
       </div>
             <p class="titleforpopup">2013 | Associate for Dolce &amp; Gabbana, Milan office</p>
@@ -726,8 +726,8 @@
           </p>
           </span>
       <figure>
-        <img alt="Carousel Bootstrap Third" src="images/DG2022-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.7;">
-        <img alt="Carousel Bootstrap Third" src="images/DG-logo-invert.jpg" class="portfolio_images twoflowtwo" style"filter: invert(100%); -webkit-filter: invert(100%);" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 1;">
+        <img alt="Dolce and Gabbana portfolio" src="images/DG2022-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 0.7;">
+        <img alt="Dolce and Gabbana Logo" src="images/DG-logo-invert.jpg" class="portfolio_images twoflowtwo" style"filter: invert(100%); -webkit-filter: invert(100%);" text-align="center" style="display: block; margin: auto; transform: scale(1.2); opacity: 1;">
       </figure>
 
       </div>
@@ -742,7 +742,7 @@
           <div class="click-zoom">
             <label>
               <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images_pop">
+          <img alt="National Bank portfolio" src="images/nationalbank.jpg" class="portfolio_images_pop">
         </label>
       </div>
             <p class="titleforpopup">2010 - 2011 | Desktop Publisher for National Bank Financial</p>
@@ -751,7 +751,7 @@
               <span class="skillsbubble">Excel</span><span class="skillsbubble">Excel Macros</span><span class="skillsbubble">Word</span><span class="skillsbubble">PowerPoint</span><span class="skillsbubble">Photoshop</span>
             </p>
           </span>
-                <img alt="Carousel Bootstrap Third" src="images/nationalbank.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
+                <img alt="National Bank portfolio" src="images/nationalbank.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.7;">
               </div>
         </td>
 
@@ -765,7 +765,7 @@
       <div class="click-zoom">
         <label>
           <input type="checkbox">
-      <img alt="Carousel Bootstrap Third" src="images/mred.jpg" class="portfolio_images_pop">
+      <img alt="Mred portfolio" src="images/mred.jpg" class="portfolio_images_pop">
     </label>
   </div>
         <p class="titleforpopup">2002 - 2010 | Fashion &amp; Accessories Designer for M<span style="color: red;">red</span></p>
@@ -774,7 +774,7 @@
         <span class="skillsbubble">Fashion knowledge</span><span class="skillsbubble">Pantone Matching System</span><span class="skillsbubble">Photography</span><span class="skillsbubble">Photoshop</span><span class="skillsbubble">Illustrator</span><span class="skillsbubble">PowerPoint</span><span class="skillsbubble">Excel</span></p>
 
       </span>
-    <img alt="Carousel Bootstrap Third" src="images/mred-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
+    <img alt="Mred portfolio with gradient" src="images/mred-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.8;">
   </div>
 </td>
   </tr>
