refined about me 3 icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -330,18 +330,18 @@
 
     <td class="threebythreegridaboutme" style="">
       <img alt="About Me User Centric" src="images/AboutMe-Icon-3.png" class="about-me-thumbnails">
-      <p>User-Centric Design&nbsp;Advocate</p>
+      <p>User-Centric<br>Design&nbsp;Advocate</p>
     </td>
 
     <td class="threebythreegridaboutme" style="">
      <img alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png" class="about-me-thumbnails">
-     <p>Creative Problem&nbsp;Solver</p>
+     <p>Creative<br>Problem&nbsp;Solver</p>
     </td>
 
 
     <td class="threebythreegridaboutme" style="">
       <img alt="About Me Team Player" src="images/AboutMe-Icon-1.png" class="about-me-thumbnails">
-      <p>Collaborative Team&nbsp;Player</p>
+      <p>Dynamic<br> Team&nbsp;Player</p>
     </td>
 
   </tr>
